6923002: assert(false,"this call site should not be polymorphic")

Clear the total count when a receiver information is cleared.

Reviewed-by: never, jrose